# docfill

./: .gitignore  ADVANCED_FEATURES.md  README.md  config.ini  config.json  config.yaml  config_reader.py  directory_processor.py  docfill.py  docx_processor.py  main.py  pdf_processor.py  pyproject.toml  standalone_docfill.py  standalone_filldoc.py  template.txt  test_docxtpl_integration.py  test_formatting.py  test_replacement.py  verify_output.py
examples/: ADVANCED_TEMPLATE_GUIDE.md  advanced_example.yaml
